2008-05-18  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo.c : register printing with cairo near
	to the original print menu item
	* plug-ins/postscript/postscript.c : don't register the postscript renderer
	for printing on win32

	Attempts to fix bug #534275
	* lib/diagdkrenderer.c(draw_fill_rounded_rect) : attempt to make
	arc drawing for radius<line_width less backend specific. 
	* objects/standard/box.c objects/standard/polyline.c 
	  objects/standard/zigzagline.c : 
	set LINEJOIN_ROUND when rendering "rounded" (with radius>0)

2008-05-24  Steffen Macke <sdteffen@sdteffen.de>

	* sheets/SISSI/analyse.png:
	* sheets/SISSI/personne.png:
	* sheets/SISSI/pda_icon.png:
	* sheets/SISSI/sauvegarde.png:
	* sheets/SISSI/logiciel.png:
	* sheets/SISSI/barriere_icon.png:
	* sheets/SISSI/meuble.png:
	* sheets/SISSI/camera_interphone_icon.png:
	* sheets/SISSI/safe_icon.png:
	* sheets/SISSI/si.png:
	* sheets/SISSI/info.png:
	* sheets/SISSI.sheet.in: Standard icon size 22x22

2008-05-23  Steffen Macke <sdteffen@sdteffen.de>

	* sheets/SISSI/capteur_brise_glace_icon.png:
	* sheets/SISSI/detecteur_fumee_icon.png:
	* sheets/SISSI/capteur_faisceau_icon.png:
	* sheets/SISSI/detecteur_enthalpie_icon.png:
	* sheets/SISSI/condensateur_icon.png:
	* sheets/SISSI/detecteur_mouvement_icon.png:
	* sheets/SISSI.sheet.in: Standard icon size 22x22

2008-05-22  Steffen Macke <sdteffen@sdteffen.de>

	* sheets/SISSI/46.xml: Fixed XML problem that prevented the object 
	from being used
	* sheets/SISSI/detecteur_vibration_icon.png:
	* sheets/SISSI/detecteur_mouvement_video_icon.png:
	* sheets/SISSI/detecteur_vehicule_icon.png:
	* sheets/SISSI.sheet.in: Standard icon size 22x22

2008-05-21  Steffen Macke <sdteffen@sdteffen.de>

	* sheets/SISSI/digi_code_icon.png:
	* sheets/SISSI/filtre_air_icon.png:
	* sheets/SISSI/lecteur_badge_icon.png:
	* sheets/SISSI.sheet.in: Standard icon size 22x22

2008-05-19  Steffen Macke <sdteffen@sdteffen.de>

	* sheets/SISSI/pompe_icon.png: